<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A34C9830" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="129dp"
                android:layout_height="64dp"
                android:layout_marginTop="120dp"
                android:fontFamily="@font/caudex_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="362dp"
                android:layout_height="58dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/Email_Address"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="10dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="360dp"
                android:layout_height="54dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_security_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="10dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

            <Button
                android:id="@+id/LoginButton"
                android:layout_width="361dp"
                android:layout_height="49dp"
                android:layout_marginTop="34dp"
                android:background="@drawable/input_bg"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/inputPassword"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

            <TextView
                android:id="@+id/createnewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/SignUp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/LoginButton"
                app:layout_constraintStart_toStartOf="@+id/LoginButton"
                app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

            <TextView
                android:id="@+id/adminLogin"
                android:layout_width="184dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/admin_login"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="@+id/createnewAccount"
                app:layout_constraintStart_toStartOf="@+id/createnewAccount"
                app:layout_constraintTop_toBottomOf="@+id/createnewAccount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>