<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A34C9830" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="187dp"
                android:layout_height="66dp"
                android:layout_marginTop="120dp"
                android:fontFamily="@font/caudex_bold"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="362dp"
                android:layout_height="58dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/Email_Address"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="10dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="360dp"
                android:layout_height="54dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_security_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="10dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

            <EditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="360dp"
                android:layout_height="54dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_security_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/confirmpswd"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="10dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

            <Button
                android:id="@+id/RegisterButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_bg"
                android:text="@string/register"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/inputConfirmPassword"
                app:layout_constraintStart_toStartOf="@+id/inputConfirmPassword"
                app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />

            <TextView
                android:id="@+id/alreadyHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/haveAnAccount"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/RegisterButton"
                app:layout_constraintStart_toStartOf="@+id/RegisterButton"
                app:layout_constraintTop_toBottomOf="@+id/RegisterButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>